# simple_math_lib-1

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp
src/math_lib/: math_lib.cpp
src/math_lib/include/: math_lib.h
tests/: CMakeLists.txt  math_library_tests.cpp
